# 3dsoft_sensor

./: 20-3dsensor.rules  3d_sensor_viz.rviz  README.md
3d_sensor/: CMakeLists.txt  model (copy).xml  model.xml  package.xml
3d_sensor/launch/: 3dsensor_description.launch
3d_sensor/ros_position/: ros_position.ino
3d_sensor/src/: state_publisher.cpp
arduino/pid_controller/: pid_controller.ino
calibrationdata/: ost.txt  ost.yaml
cv_camera/launch/: stereo.launch
fake_sync/: CMakeLists.txt  package.xml
fake_sync/launch/: fake_sync.launch
fake_sync/params/cameras/calib/: calib_fab_narrow_left.yaml  calib_fab_narrow_right.yaml  calib_fab_wide_left.yaml  calib_fab_wide_right.yaml  confs_para_xb3.txt
fake_sync/src/nodes/: fake_sync.cpp
icp_calib/: CMakeLists.txt  package.xml
icp_calib/src/: concatenatescans.cpp  icp_ensamble_node (copy).cpp  icp_ensamble_node.cpp  icp_two_clouds_ros.cpp  ndf_regis.cpp  prerejective_regis.cpp
isp_calib/: CMakeLists.txt  package.xml
isp_calib/src/: icp.cpp  isp_calib_node.cpp  monkey.ply.txt
laser-scan-gen/: CMakeLists.txt  package.xml
laser-scan-gen/scripts/: lasergen.py
laser_scan_splitter/demo/: demo.launch
laser_scan_splitter/launch/: split_scan.launch
launch/: cloud_scan_assembler.launch  laser_scan_assembler3d.launch  usb_cam.launch
learning_tf/: CMakeLists.txt  CMakeLists.txt.save  package.xml
lidar_cam_calib/: CMakeLists.txt
motor-laser-calib/: CMakeLists.txt  package.xml
my_pcl_tutorial/: CMakeLists.txt  package.xml
periodic_snapshotter/: CMakeLists.txt  package.xml
(+41 files in other folders)
